--- a/spec/cassettes/User_registers/valid_personal_info_and_declined_card.yml
+++ b/spec/cassettes/User_registers/valid_personal_info_and_declined_card.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: US-ASCII
-      string: amount=999&currency=usd&card=tok_2JOSq7GDKdN47l&description=Sign%20up%20charge%20for%20ggd%40example.com
+      string: amount=999&currency=usd&card=tok_2K1wZPEZuerq6z&description=Sign%20up%20charge%20for%20ggd%40example.com
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -31,7 +31,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Fri, 02 Aug 2013 16:44:51 GMT
+      - Sun, 04 Aug 2013 09:33:09 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
@@ -48,7 +48,7 @@ http_interactions:
       encoding: US-ASCII
       string: ! "{\n  \"error\": {\n    \"message\": \"Your card was declined.\",\n
         \   \"type\": \"card_error\",\n    \"code\": \"card_declined\",\n    \"charge\":
-        \"ch_2JOSlcvwR53oKp\"\n  }\n}\n"
+        \"ch_2K1w8q6TX22fAd\"\n  }\n}\n"
     http_version: 
-  recorded_at: Fri, 02 Aug 2013 16:44:51 GMT
+  recorded_at: Sun, 04 Aug 2013 09:33:14 GMT
 recorded_with: VCR 2.5.0
