--- a/spec/cassettes/User_registers/valid_personal_info_and_valid_card.yml
+++ b/spec/cassettes/User_registers/valid_personal_info_and_valid_card.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: US-ASCII
-      string: amount=999&currency=usd&card=tok_2JOQKDwvca0Hug&description=Sign%20up%20charge%20for%20ggd%40example.com
+      string: amount=999&currency=usd&card=tok_2K1wq7HklgcLCR&description=Sign%20up%20charge%20for%20ggd%40example.com
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -31,7 +31,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Fri, 02 Aug 2013 16:43:21 GMT
+      - Sun, 04 Aug 2013 09:33:04 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
@@ -46,13 +46,13 @@ http_interactions:
       - 'true'
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"id\": \"ch_2JORZN00KEprZy\",\n  \"object\": \"charge\",\n
-        \ \"created\": 1375461800,\n  \"livemode\": false,\n  \"paid\": true,\n  \"amount\":
+      string: ! "{\n  \"id\": \"ch_2K1wtfpfxd6jYe\",\n  \"object\": \"charge\",\n
+        \ \"created\": 1375608784,\n  \"livemode\": false,\n  \"paid\": true,\n  \"amount\":
         999,\n  \"currency\": \"usd\",\n  \"refunded\": false,\n  \"fee\": 59,\n  \"fee_details\":
         [\n    {\n      \"amount\": 59,\n      \"currency\": \"usd\",\n      \"type\":
         \"stripe_fee\",\n      \"description\": \"Stripe processing fees\",\n      \"application\":
         null,\n      \"amount_refunded\": 0\n    }\n  ],\n  \"card\": {\n    \"id\":
-        \"cc_2JOQRSiUPaikMa\",\n    \"object\": \"card\",\n    \"last4\": \"4242\",\n
+        \"cc_2K1wF7XSZFdb3D\",\n    \"object\": \"card\",\n    \"last4\": \"4242\",\n
         \   \"type\": \"Visa\",\n    \"exp_month\": 7,\n    \"exp_year\": 2015,\n
         \   \"fingerprint\": \"MDPDqQ5D8jnzbtjS\",\n    \"customer\": null,\n    \"country\":
         \"US\",\n    \"name\": null,\n    \"address_line1\": null,\n    \"address_line2\":
@@ -63,5 +63,5 @@ http_interactions:
         null,\n  \"invoice\": null,\n  \"description\": \"Sign up charge for ggd@example.com\",\n
         \ \"dispute\": null\n}\n"
     http_version: 
-  recorded_at: Fri, 02 Aug 2013 16:43:21 GMT
+  recorded_at: Sun, 04 Aug 2013 09:33:09 GMT
 recorded_with: VCR 2.5.0
