--- a/spec/cassettes/User_registers/with_valid_user_info_and_declined_card.yml
+++ b/spec/cassettes/User_registers/with_valid_user_info_and_declined_card.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.stripe.com/v1/charges
+    uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: amount=999&currency=usd&card=tok_2Lc0A0STKmppWl&description=Sign%20up%20charge%20for%20ggd%40example.com
+      string: plan=gold&card=tok_2PkD2dXxwqAEIl&description=Subscribe%20for%20ggd%40example.com
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Gateki-MacBook-Air.local 12.4.0 Darwin Kernel Version 12.4.0: Wed May  1 17:57:12
         PDT 2013; root:xnu-2050.24.15~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '104'
+      - '81'
   response:
     status:
       code: 402
@@ -31,24 +31,23 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 08 Aug 2013 14:52:51 GMT
+      - Mon, 19 Aug 2013 15:37:51 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '152'
+      - '117'
       Connection:
       - keep-alive
+      Access-Control-Allow-Credentials:
+      - 'true'
       Cache-Control:
       - no-cache, no-store
       Access-Control-Max-Age:
       - '300'
-      Access-Control-Allow-Credentials:
-      - 'true'
     body:
       encoding: US-ASCII
       string: ! "{\n  \"error\": {\n    \"message\": \"Your card was declined.\",\n
-        \   \"type\": \"card_error\",\n    \"code\": \"card_declined\",\n    \"charge\":
-        \"ch_2Lc0FUSbxTEAyR\"\n  }\n}\n"
+        \   \"type\": \"card_error\",\n    \"code\": \"card_declined\"\n  }\n}\n"
     http_version: 
-  recorded_at: Thu, 08 Aug 2013 14:52:51 GMT
+  recorded_at: Mon, 19 Aug 2013 15:37:51 GMT
 recorded_with: VCR 2.5.0
